@@ -9,6 +9,8 @@ DROP TABLE qtrack;
 DROP TABLE categories;
 DROP TABLE storedchk;
 DROP TABLE robots;
+DROP TABLE cachedchk;
+DROP TABLE cachedchk2;
 
 -- DROP TABLE qinfo;
 -- DROP TABLE ndict;
