@@ -177,3 +177,9 @@ CREATE TABLE cachedchk (
        rec_id integer
 );
 CREATE UNIQUE INDEX cachedchk_i ON cachedchk (rec_id);
+
+CREATE TABLE "cachedchk2" (
+       url_id integer
+);
+CREATE UNIQUE INDEX cachedchk2_i ON cachedchk (url_id);
+
